# cg

./: .dropbox  CMakeLists.txt.user.08da23b.2.7pre1
examples/: CMakeLists.txt
examples/Newtone_method/: CMakeLists.txt  Newtone_method (Mikhail Melnik's conflicted copy 2013-11-15).cpp  Newtone_method.cpp
examples/operations/: CMakeLists.txt  diameter.cpp  douglas.cpp
examples/orientation/: orientation_contour_ccw.cpp
examples/simple_iteration_method/: CMakeLists.txt  si_method (Grigory Tkachenko's conflicted copy 2013-11-15).cpp  si_method.cpp
examples/triangulation/: CMakeLists.txt  delaunay.cpp
examples/visible/: CMakeLists.txt  shortest_path.cpp
include/cg/common/: values.h
include/cg/io/: point.h  triangle.h
include/cg/operations/: diameter.h  douglas.h
include/cg/primitives/: point.h  segment.h  vector.h
include/cg/triangulation/: delaunay.h  delaunay_incremental.h  is_inside.h
include/cg/visibility/: minkovsky_sum.h  shortest_path.h  visibility3.h
tests/: CMakeLists.txt  delaunay.cpp  douglas.cpp  minkovsky_sum.cpp  visibility.cpp
